[bugfix] 서버 통신 임시 수정
메인피드 받아오기 get요청 headers, params 임시 주석 처리

--- a/careerlyclonefrontend/public/index.html
+++ b/careerlyclonefrontend/public/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- 임시 CORS 문제 처리 -->
+    <script src="https://developers.kakao.com/sdk/js/kakao.min.js"></script>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
